[package]
name = "test_gtk"
version = "0.1.0"
authors = ["madosuki <yurikasamaaikatsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.gtk]
version = "0.15.5"
# features = ["v3_16"]

[dependencies.gio]
version = "0.15.12"
# features = ["v2_44"]

[dependencies.glib]
version = "0.15.2"
# features = ["v2_60"]
